# ChangeLog for sys-apps/openrc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.268 2013/04/25 21:04:45 williamh Exp $

  25 Apr 2013; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  change git source to point to github

  24 Apr 2013; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  migrate to eapi 5 and remove old baselayout-1 migration code

  03 Mar 2013; William Hubbs <williamh@gentoo.org> openrc-0.11.8.ebuild:
  Per Mike Frysinger, on bug #459782, we should not rdepend on ncurses[-tinfo].

  01 Mar 2013; William Hubbs <williamh@gentoo.org> openrc-0.11.8.ebuild:
  The stable version of OpenRc does not support building with ncurses[tinfo]
  #459782.

  01 Mar 2013; William Hubbs <williamh@gentoo.org> -openrc-0.9.8.4.ebuild:
  remove old version

  12 Feb 2013; Sven Vermeulen <swift@gentoo.org> openrc-0.9.8.4.ebuild,
  openrc-0.11.8.ebuild, openrc-9999.ebuild:
  Add dependency on selinux-openrc if USE=selinux

  03 Jan 2013; William Hubbs <williamh@gentoo.org> metadata.xml,
  openrc-9999.ebuild:
  Add support for tools use flag

  02 Jan 2013; William Hubbs <williamh@gentoo.org> -openrc-0.11.6.ebuild:
  remove old version

  02 Jan 2013; Raúl Porcel <armin76@gentoo.org> openrc-0.11.8.ebuild:
  alpha/m68k/s390/sh stable wrt #435756

  02 Jan 2013; Tobias Klausmann <klausman@gentoo.org> openrc-0.11.6.ebuild:
  Stable on alpha, bug #435756

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> openrc-0.11.8.ebuild:
  Stable for sparc, wrt bug #435756

  29 Dec 2012; William Hubbs <williamh@gentoo.org> -openrc-0.10.5.ebuild:
  remove old unstable version

  28 Dec 2012; Jeroen Roovers <jer@gentoo.org> openrc-0.11.8.ebuild:
  Stable for HPPA (bug #435756).

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> openrc-0.11.8.ebuild:
  Stable for ia64, wrt bug #435756

  09 Dec 2012; Markus Meier <maekke@gentoo.org> openrc-0.11.8.ebuild:
  arm stable, bug #435756
