@@ -9,13 +9,13 @@ AUX openrc.logrotate 71 SHA256 0b44210db9770588bd491cd6c0ac9412d99124c6be4c9d3f7
 AUX start-stop-daemon.pam 63 SHA256 2681da17e4a122656b5303b7c7eca82b8fb182641290b153fdbe96b63638086d SHA512 85cf440611b8f87f51bf24bdd9fa03639a75b950f00096d81b8826c21ae85ff9784b8c56b8ddb482e70f08bce933d4561b30750346d51fb2cef3be34acc065cb WHIRLPOOL 4abc9f051155a62d3033258a06003a4ca3909d8104deca84d5c1605bc1c7e56167fd82b2b4b72fe7b707070de98a7628730de1ad3f14b924b5b1480fba5ef854
 DIST openrc-0.11.8.tar.bz2 174860 SHA256 e1f7c5ed98a63178c20f3d023a7d35fe416e8e7db2f0cf78ff346a6d2f7949a9 SHA512 aaea9f1e1d08c367beb6d35bcc1d258eb9d7b71a659c05088f9027b0558aae068b2ad7c221cf8ff8b8950f5a4a5c187ee7b986ce2d475a9e3cccda74d040f780 WHIRLPOOL 69217f13dd05e9a443d906281ada167d6892615eb5db7c372ba535a3d4a21ac3111fad9d54ef06650c3b488b848180bbfe5257dbc83f62f5ecf60724dec2900c
 EBUILD openrc-0.11.8.ebuild 16192 SHA256 386df0c86ebecdf5b66b0c8e4b66ed047b0421e8de5a3fc002d204686b543e2c SHA512 2ab3c67c214d870143513c17cdf9a67ad01b1173bad79782e58f6e26f32f6a86da1a7011b10c0fd68bbed103dd22a7615d07f9ae5680945fe2b08c500815ac9c WHIRLPOOL 66cd99638b2d915be0655c4d23be7a1722564bd0708f1ff356da446ae4fff4bd5b6a834d064fede4cded724c2b08794c41a4c39b749f8d6f103bfa45b59c8524
-EBUILD openrc-9999.ebuild 9776 SHA256 81acaeba3167a0cc6fdb7b8cfc98be9b627af4f95243be97cb7cf3ae660c8487 SHA512 a2b07516f54657429371070034e9f22972627332c94e6ea504fde0305dc8ed2ab2248102b822b8685e9037f1ae47a76c5e3a450cbdd9727e9603b7de64686e83 WHIRLPOOL 8670024a0b7fd8cae19a7a2beb7b26b114c95cb518cd7f1d94032acb6cf3ebe6daf8a7d74b43d431928cf88f278f226ede49828197058fd9848d226be066dfef
-MISC ChangeLog 45315 SHA256 43ad8f0859a91ae9b3cd7ce788935cf97f1e912565e8c24e64852f5fc916c6f1 SHA512 b3d9d168d2dab443b8797e295d981ee881741247a4091b1a787f94283a13ae6da363cf3e76d249c311d5537f8794c122824078d5846119c9399f3a408d193572 WHIRLPOOL 270b64f9b82eeaf568d52020f937f3d9dd0aff3f559904d21e4257c28d45d4df4d47cc3575226b8342594a73d9d6cdcd7b0641df5a3b1bd4e7871d5e0e112e61
+EBUILD openrc-9999.ebuild 9867 SHA256 816503b5a63af79787024c5d5fd0ad5146b5e992716b1032ce13c06cdec90f51 SHA512 baadf9fa2feaae6c27291056195d07b87f7cb8a3c5670993400a621f9de9f2d744292a2863514c1f0bd226a6210e7654a55477d55c16454826c1bef31ef4bec8 WHIRLPOOL cc8401f2b205465e87c5fd5d9b6e48e6994b733acbf59db48259bff725651713b6440d4cb4a74053725b4481b017fb3de10323880297b7a3e63c129a9b325526
+MISC ChangeLog 45509 SHA256 d76040604e162bdc45245764de4ebbd58c73cfc1c91c7d037028cb84d595af58 SHA512 86c99dbf35efc3349784dd66ddb7615ceb320c818f3d682e8a23f794af150338cd6c7360a75eb1f73d8248c22d4a653b8b577532d4161334b74381f7eff38bb1 WHIRLPOOL f66e0e594611e94b8d2fdad4b95f546dde9195d216b27706eb43fbd55fd406bc1701866a62645372e7c9144a4ab254aef51812c2232844d74a34def3eecb2741
 MISC metadata.xml 297 SHA256 85cd033d330fb2c67dbe209ef1bd6728ee39e434c3ebdb0453de361163af72ea SHA512 eb5abc5aab84528c2e4e5a4d2e7f5db1a026b8f4acaaec81cb65b3897f4f610e32af87b4f833fb7111c9d6856c5b0bf6dd5c0f8b1f2a96c88bd8625bbd2fa9eb WHIRLPOOL d086011ded5e7af75e900e96da92a7eca60635a64831aad5024eacf0b33000735eeaaf59e32e88e45f1c908ebeeba43307cf21b00add39e28700128c10a6fa73
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHx2coACgkQblQW9DDEZThmNgCdE1EIk2vn/UY8SDdRl2qjcFfD
-GNoAn1hRkNeLwoO9/Awwu5+b48wUMzNI
-=xPQt
+iEYEAREIAAYFAlIACOEACgkQblQW9DDEZThTJwCfR5d7gZdAsj9fZiqpOB6gx4Op
+gq0An0L3+GktD7Y3ad5qzoSd+VtKxB/J
+=76OA
 -----END PGP SIGNATURE-----
