@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/openrc-9999.ebuild,v 1.122 2013/07/26 02:05:21 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/openrc-9999.ebuild,v 1.123 2013/08/05 20:19:21 williamh Exp $
 
 EAPI=5
 
@@ -136,6 +136,12 @@ src_install() {
 
 	# install the gentoo pam.d file
 	newpamd "${FILESDIR}"/start-stop-daemon.pam start-stop-daemon
+
+	# install documentation
+dodoc README.busybox
+	if use newnet; then
+		dodoc README.net
+	fi
 }
 
 add_boot_init() {
