@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.268 2013/04/25 21:04:45 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.269 2013/08/05 20:19:21 williamh Exp $
+
+  05 Aug 2013; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
+  Install the documention for incompatibilities with busybox, and optionally,
+  the documentation for the newnet scripts.
 
   25 Apr 2013; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
   change git source to point to github
